[package]
name = "aoc_input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aoc_input_lib"
path = "src/lib.rs"

[[bin]]
name = "aoc-input"
path = "src/bin/aoc-input/main.rs"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
home = "0.5.4"
reqwest = { version = "0.11.14", features = ["blocking"] }
